--- a/content/docs/multidimensional-arrays.mdx
+++ b/content/docs/multidimensional-arrays.mdx
@@ -1,32 +1,37 @@
 ---
-title: Java Multidimensional Arrays
-description: In this tutorial, we will learn how to use the Java continue statement to skip the current iteration of a loop.
+title: "Arrays Multidimensionais em Java"
+description: "Neste tutorial, aprenderemos como usar arrays multidimensionais em Java para armazenar dados em múltiplas dimensões"
+difficulty: "Intermediário"
+category: "Estruturas de Dados"
 ---
 
-## Java Multidimensional Arrays
-Before we learn about the multidimensional array, make sure you know about Java array.
+## Arrays Multidimensionais em Java
 
-A multidimensional array is an array of arrays. Each element of a multidimensional array is an array itself. For example,
+Antes de aprendermos sobre arrays multidimensionais, certifique-se de que você conhece [arrays em Java](/docs/arrays).
+
+Um array multidimensional é um array de arrays. Cada elemento de um array multidimensional é um array em si. Por exemplo,
 
 ```java
 int[][] a = new int[3][4];
 ```
-Here, we have created a multidimensional array named a. It is a 2-dimensional array, that can hold a maximum of 12 elements,
 
-[2-dimensional array in Java]
-2-dimensional Array
+Aqui, criamos um array multidimensional chamado `a`. É um array 2-dimensional que pode conter um máximo de 12 elementos.
 
-Remember, Java uses zero-based indexing, that is, indexing of arrays in Java starts with 0 and not 1.
+## Array 2-Dimensional
 
-Let's take another example of the multidimensional array. This time we will be creating a 3-dimensional array. For example,
+Lembre-se, Java usa indexação baseada em zero, ou seja, a indexação de arrays em Java começa com 0 e não 1.
+
+Vamos pegar outro exemplo de array multidimensional. Desta vez criaremos um array 3-dimensional. Por exemplo,
 
 ```java
 String[][][] data = new String[3][4][2];
 ```
-Here, data is a 3d array that can hold a maximum of 24 (3*4*2) elements of type [String](/docs/string).
 
-### How to initialize a 2d array in Java?
-Here is how we can initialize a 2-dimensional array in Java.
+Aqui, `data` é um array 3D que pode conter um máximo de 24 (3*4*2) elementos do tipo [String](/docs/string).
+
+## Como inicializar um array 2D em Java?
+
+Aqui está como podemos inicializar um array 2-dimensional em Java.
 
 ```java
 int[][] a = {
@@ -35,48 +40,46 @@ int[][] a = {
     {7},
 };
 ```
-As we can see, each element of the multidimensional array is an array itself. And also, unlike C/C++, each row of the multidimensional array in Java can be of different lengths.
 
+Como podemos ver, cada elemento do array multidimensional é um array em si. E também, diferente de C/C++, cada linha do array multidimensional em Java pode ter comprimentos diferentes.
 
-[2d array example in Java with variable length]
-Initialization of 2-dimensional Array
+### Exemplo: Array 2-Dimensional
 
-### Example: 2-dimensional Array
 ```java
-class MultidimensionalArray {
+public class MultidimensionalArray {
     public static void main(String[] args) {
-
-        // create a 2d array
+        // criar um array 2d
         int[][] a = {
             {1, 2, 3},
             {4, 5, 6, 9},
             {7},
         };
 
-        // calculate the length of each row
-        System.out.println("Length of row 1: " + a[0].length);
-        System.out.println("Length of row 2: " + a[1].length);
-        System.out.println("Length of row 3: " + a[2].length);
+        // calcular o comprimento de cada linha
+        System.out.println("Comprimento da linha 1: " + a[0].length);
+        System.out.println("Comprimento da linha 2: " + a[1].length);
+        System.out.println("Comprimento da linha 3: " + a[2].length);
     }
 }
 ```
-#### Output:
+
+#### Saída:
 
 ```plaintext
-Length of row 1: 3
-Length of row 2: 4
-Length of row 3: 1
+Comprimento da linha 1: 3
+Comprimento da linha 2: 4
+Comprimento da linha 3: 1
 ```
-In the above example, we are creating a multidimensional array named a. Since each component of a multidimensional array is also an array (`a[0]`,`a[1]` and `a[2]` are also arrays).
 
-Here, we are using the `length` attribute to calculate the length of each row.
+No exemplo acima, estamos criando um array multidimensional chamado `a`. Como cada componente de um array multidimensional também é um array (`a[0]`, `a[1]` e `a[2]` também são arrays).
 
-### Example: Print all elements of 2d array Using Loop
+Aqui, estamos usando o atributo `length` para calcular o comprimento de cada linha.
+
+### Exemplo: Imprimir todos os elementos do array 2D usando Loop
 
 ```java
-class MultidimensionalArray {
+public class MultidimensionalArray {
     public static void main(String[] args) {
-
         int[][] a = {
             {1, -2, 3},
             {-4, -5, 6, 9},
@@ -84,14 +87,15 @@ class MultidimensionalArray {
         };
 
         for (int i = 0; i < a.length; ++i) {
-            for(int j = 0; j < a[i].length; ++j) {
+            for (int j = 0; j < a[i].length; ++j) {
                 System.out.println(a[i][j]);
             }
         }
     }
 }
 ```
-#### Output:
+
+#### Saída:
 
 ```plaintext
 1
@@ -103,106 +107,459 @@ class MultidimensionalArray {
 9
 7
 ```
-We can also use the [for...each loop](/docs/enhanced-for-loop) to access elements of the multidimensional array. For example,
+
+## Tipos de Arrays Multidimensionais
+
+### 1. Arrays 2D (Matrizes)
 
 ```java
-class MultidimensionalArray {
+public class Arrays2D {
     public static void main(String[] args) {
-
-        // create a 2d array
-        int[][] a = {
-            {1, -2, 3},
-            {-4, -5, 6, 9},
-            {7},
+        // Matriz 3x3
+        int[][] matriz = {
+            {1, 2, 3},
+            {4, 5, 6},
+            {7, 8, 9}
         };
 
-        // first for...each loop access the individual array
-        // inside the 2d array
-        for (int[] innerArray: a) {
-            // second for...each loop access each element inside the row
-            for(int data: innerArray) {
-                System.out.println(data);
+        // Imprimir matriz
+        for (int i = 0; i < matriz.length; i++) {
+            for (int j = 0; j < matriz[i].length; j++) {
+                System.out.print(matriz[i][j] + " ");
             }
+            System.out.println();
         }
     }
 }
 ```
-Output:
 
-```plaintext
-1
--2
-3
--4
--5
-6
-9
-7
-```
-In the above example, we are have created a 2d array named `a`. We then used `for` loop and `for...each` loop to access each element of the array.
-
-### How to initialize a 3d array in Java?
-Let's see how we can use a 3d array in Java. We can initialize a 3d array similar to the 2d array. For example,
+### 2. Arrays 3D
 
 ```java
-// test is a 3d array
-int[][][] test = {
-        {
-          {1, -2, 3},
-          {2, 3, 4}
-        },
-        {
-          {-4, -5, 6, 9},
-          {1},
-          {2, 3}
-        }
-};
-```
-Basically, a 3d array is an array of 2d arrays. The rows of a 3d array can also vary in length just like in a 2d array.
-
-### Example: 3-dimensional Array
-```java
-class ThreeArray {
+public class Arrays3D {
     public static void main(String[] args) {
-
-        // create a 3d array
-        int[][][] test = {
+        // Array 3D: 2 páginas, 3 linhas, 4 colunas
+        int[][][] array3D = {
             {
-              {1, -2, 3},
-              {2, 3, 4}
+                {1, 2, 3, 4},
+                {5, 6, 7, 8},
+                {9, 10, 11, 12}
             },
             {
-              {-4, -5, 6, 9},
-              {1},
-              {2, 3}
+                {13, 14, 15, 16},
+                {17, 18, 19, 20},
+                {21, 22, 23, 24}
             }
         };
 
-        // for..each loop to iterate through elements of 3d array
-        for (int[][] array2D: test) {
-            for (int[] array1D: array2D) {
-                for(int item: array1D) {
-                    System.out.println(item);
+        // Acessar elemento
+        System.out.println("Elemento [1][2][3]: " + array3D[1][2][3]);
+    }
+}
+```
+
+## Exemplos Práticos
+
+### Exemplo 1: Tabuleiro de Xadrez
+
+```java
+public class TabuleiroXadrez {
+    public static void main(String[] args) {
+        char[][] tabuleiro = new char[8][8];
+
+        // Preencher tabuleiro
+        for (int i = 0; i < 8; i++) {
+            for (int j = 0; j < 8; j++) {
+                if ((i + j) % 2 == 0) {
+                    tabuleiro[i][j] = '□'; // Casa branca
+                } else {
+                    tabuleiro[i][j] = '■'; // Casa preta
                 }
             }
         }
+
+        // Imprimir tabuleiro
+        System.out.println("Tabuleiro de Xadrez:");
+        for (int i = 0; i < 8; i++) {
+            for (int j = 0; j < 8; j++) {
+                System.out.print(tabuleiro[i][j] + " ");
+            }
+            System.out.println();
+        }
     }
 }
 ```
-#### Output:
 
-```plaintext
-1
--2
-3
-2
-3
-4
--4
--5
-6
-9
-1
-2
-3
+### Exemplo 2: Matriz de Notas
+
+```java
+public class MatrizNotas {
+    public static void main(String[] args) {
+        // Matriz de notas: 3 alunos, 4 disciplinas
+        double[][] notas = {
+            {8.5, 7.2, 9.0, 6.8}, // Aluno 1
+            {7.8, 8.9, 7.5, 8.2}, // Aluno 2
+            {9.2, 8.7, 9.5, 8.9}  // Aluno 3
+        };
+
+        // Calcular média de cada aluno
+        for (int i = 0; i < notas.length; i++) {
+            double soma = 0;
+            for (int j = 0; j < notas[i].length; j++) {
+                soma += notas[i][j];
+            }
+            double media = soma / notas[i].length;
+            System.out.println("Média do aluno " + (i + 1) + ": " + media);
+        }
+
+        // Calcular média de cada disciplina
+        for (int j = 0; j < notas[0].length; j++) {
+            double soma = 0;
+            for (int i = 0; i < notas.length; i++) {
+                soma += notas[i][j];
+            }
+            double media = soma / notas.length;
+            System.out.println("Média da disciplina " + (j + 1) + ": " + media);
+        }
+    }
+}
 ```
+
+### Exemplo 3: Jogo da Velha
+
+```java
+public class JogoVelha {
+    public static void main(String[] args) {
+        char[][] tabuleiro = new char[3][3];
+
+        // Inicializar tabuleiro vazio
+        for (int i = 0; i < 3; i++) {
+            for (int j = 0; j < 3; j++) {
+                tabuleiro[i][j] = '-';
+            }
+        }
+
+        // Simular algumas jogadas
+        tabuleiro[0][0] = 'X';
+        tabuleiro[1][1] = 'O';
+        tabuleiro[2][2] = 'X';
+        tabuleiro[0][2] = 'O';
+        tabuleiro[2][0] = 'X';
+
+        // Imprimir tabuleiro
+        System.out.println("Jogo da Velha:");
+        for (int i = 0; i < 3; i++) {
+            for (int j = 0; j < 3; j++) {
+                System.out.print(tabuleiro[i][j] + " ");
+            }
+            System.out.println();
+        }
+    }
+}
+```
+
+### Exemplo 4: Matriz de Temperaturas
+
+```java
+public class MatrizTemperaturas {
+    public static void main(String[] args) {
+        // Matriz de temperaturas: 7 dias, 24 horas
+        double[][] temperaturas = new double[7][24];
+
+        // Simular dados de temperatura
+        for (int dia = 0; dia < 7; dia++) {
+            for (int hora = 0; hora < 24; hora++) {
+                // Simular temperatura baseada na hora do dia
+                double tempBase = 20.0; // temperatura base
+                double variacao = Math.sin(hora * Math.PI / 12) * 5.0; // variação diária
+                temperaturas[dia][hora] = tempBase + variacao + (Math.random() - 0.5) * 2.0;
+            }
+        }
+
+        // Encontrar temperatura máxima e mínima
+        double maxTemp = temperaturas[0][0];
+        double minTemp = temperaturas[0][0];
+
+        for (int dia = 0; dia < 7; dia++) {
+            for (int hora = 0; hora < 24; hora++) {
+                if (temperaturas[dia][hora] > maxTemp) {
+                    maxTemp = temperaturas[dia][hora];
+                }
+                if (temperaturas[dia][hora] < minTemp) {
+                    minTemp = temperaturas[dia][hora];
+                }
+            }
+        }
+
+        System.out.println("Temperatura máxima: " + maxTemp + "°C");
+        System.out.println("Temperatura mínima: " + minTemp + "°C");
+    }
+}
+```
+
+## Operações com Arrays Multidimensionais
+
+### 1. Soma de Matrizes
+
+```java
+public class SomaMatrizes {
+    public static void main(String[] args) {
+        int[][] matrizA = {
+            {1, 2, 3},
+            {4, 5, 6},
+            {7, 8, 9}
+        };
+
+        int[][] matrizB = {
+            {9, 8, 7},
+            {6, 5, 4},
+            {3, 2, 1}
+        };
+
+        int[][] resultado = new int[3][3];
+
+        // Somar matrizes
+        for (int i = 0; i < 3; i++) {
+            for (int j = 0; j < 3; j++) {
+                resultado[i][j] = matrizA[i][j] + matrizB[i][j];
+            }
+        }
+
+        // Imprimir resultado
+        System.out.println("Soma das matrizes:");
+        for (int i = 0; i < 3; i++) {
+            for (int j = 0; j < 3; j++) {
+                System.out.print(resultado[i][j] + " ");
+            }
+            System.out.println();
+        }
+    }
+}
+```
+
+### 2. Transposta de Matriz
+
+```java
+public class TranspostaMatriz {
+    public static void main(String[] args) {
+        int[][] matriz = {
+            {1, 2, 3},
+            {4, 5, 6},
+            {7, 8, 9}
+        };
+
+        int[][] transposta = new int[3][3];
+
+        // Calcular transposta
+        for (int i = 0; i < 3; i++) {
+            for (int j = 0; j < 3; j++) {
+                transposta[j][i] = matriz[i][j];
+            }
+        }
+
+        // Imprimir matriz original
+        System.out.println("Matriz original:");
+        for (int i = 0; i < 3; i++) {
+            for (int j = 0; j < 3; j++) {
+                System.out.print(matriz[i][j] + " ");
+            }
+            System.out.println();
+        }
+
+        // Imprimir transposta
+        System.out.println("Transposta:");
+        for (int i = 0; i < 3; i++) {
+            for (int j = 0; j < 3; j++) {
+                System.out.print(transposta[i][j] + " ");
+            }
+            System.out.println();
+        }
+    }
+}
+```
+
+## Exercícios Práticos
+
+### Exercício 1: Calculadora de Média por Disciplina
+
+**Objetivo**: Calcular médias usando arrays 2D.
+
+**Enunciado**: Crie um programa que calcule a média de notas por disciplina usando arrays 2D.
+
+**Resolução**:
+
+```java
+public class CalculadoraMedias {
+    public static void main(String[] args) {
+        // Matriz de notas: 4 alunos, 3 disciplinas
+        double[][] notas = {
+            {8.5, 7.2, 9.0}, // Aluno 1
+            {7.8, 8.9, 7.5}, // Aluno 2
+            {9.2, 8.7, 9.5}, // Aluno 3
+            {6.8, 7.5, 8.2}  // Aluno 4
+        };
+
+        String[] disciplinas = {"Matemática", "Português", "História"};
+
+        // Calcular média por disciplina
+        for (int j = 0; j < notas[0].length; j++) {
+            double soma = 0;
+            for (int i = 0; i < notas.length; i++) {
+                soma += notas[i][j];
+            }
+            double media = soma / notas.length;
+            System.out.println("Média de " + disciplinas[j] + ": " + media);
+        }
+
+        // Calcular média por aluno
+        for (int i = 0; i < notas.length; i++) {
+            double soma = 0;
+            for (int j = 0; j < notas[i].length; j++) {
+                soma += notas[i][j];
+            }
+            double media = soma / notas[i].length;
+            System.out.println("Média do aluno " + (i + 1) + ": " + media);
+        }
+    }
+}
+```
+
+### Exercício 2: Verificador de Palíndromo 2D
+
+**Objetivo**: Verificar palíndromos em arrays 2D.
+
+**Enunciado**: Crie um programa que verifique se uma matriz 2D é um palíndromo.
+
+**Resolução**:
+
+```java
+public class VerificadorPalindromo2D {
+    public static void main(String[] args) {
+        int[][] matriz = {
+            {1, 2, 3, 2, 1},
+            {4, 5, 6, 5, 4},
+            {7, 8, 9, 8, 7},
+            {4, 5, 6, 5, 4},
+            {1, 2, 3, 2, 1}
+        };
+
+        boolean ehPalindromo = true;
+        int linhas = matriz.length;
+        int colunas = matriz[0].length;
+
+        // Verificar se é palíndromo
+        for (int i = 0; i < linhas / 2; i++) {
+            for (int j = 0; j < colunas; j++) {
+                if (matriz[i][j] != matriz[linhas - 1 - i][j]) {
+                    ehPalindromo = false;
+                    break;
+                }
+            }
+        }
+
+        // Verificar colunas
+        for (int i = 0; i < linhas; i++) {
+            for (int j = 0; j < colunas / 2; j++) {
+                if (matriz[i][j] != matriz[i][colunas - 1 - j]) {
+                    ehPalindromo = false;
+                    break;
+                }
+            }
+        }
+
+        System.out.println("A matriz é palíndromo: " + ehPalindromo);
+    }
+}
+```
+
+### Exercício 3: Gerador de Padrões 2D
+
+**Objetivo**: Criar padrões usando arrays 2D.
+
+**Enunciado**: Crie um programa que gere padrões visuais usando arrays 2D.
+
+**Resolução**:
+
+```java
+public class GeradorPadroes2D {
+    public static void main(String[] args) {
+        int tamanho = 5;
+        char[][] padrao = new char[tamanho][tamanho];
+
+        // Preencher com espaços
+        for (int i = 0; i < tamanho; i++) {
+            for (int j = 0; j < tamanho; j++) {
+                padrao[i][j] = ' ';
+            }
+        }
+
+        // Criar padrão de borda
+        for (int i = 0; i < tamanho; i++) {
+            padrao[0][i] = '*'; // Borda superior
+            padrao[tamanho - 1][i] = '*'; // Borda inferior
+            padrao[i][0] = '*'; // Borda esquerda
+            padrao[i][tamanho - 1] = '*'; // Borda direita
+        }
+
+        // Imprimir padrão
+        System.out.println("Padrão de borda:");
+        for (int i = 0; i < tamanho; i++) {
+            for (int j = 0; j < tamanho; j++) {
+                System.out.print(padrao[i][j] + " ");
+            }
+            System.out.println();
+        }
+    }
+}
+```
+
+### Exercício 4: Calculadora de Determinante
+
+**Objetivo**: Calcular determinante de matriz 2x2.
+
+**Enunciado**: Crie um programa que calcule o determinante de uma matriz 2x2.
+
+**Resolução**:
+
+```java
+public class CalculadoraDeterminante {
+    public static void main(String[] args) {
+        int[][] matriz = {
+            {3, 4},
+            {2, 1}
+        };
+
+        // Calcular determinante: ad - bc
+        int determinante = matriz[0][0] * matriz[1][1] - matriz[0][1] * matriz[1][0];
+
+        System.out.println("Matriz:");
+        for (int i = 0; i < 2; i++) {
+            for (int j = 0; j < 2; j++) {
+                System.out.print(matriz[i][j] + " ");
+            }
+            System.out.println();
+        }
+
+        System.out.println("Determinante: " + determinante);
+    }
+}
+```
+
+## Conclusão
+
+Arrays multidimensionais são estruturas de dados poderosas em Java para:
+
+- **Representação de dados complexos**: Matrizes, tabelas, imagens
+- **Simulação de jogos**: Tabuleiros, mapas, grades
+- **Processamento de dados**: Análise estatística, cálculos matemáticos
+- **Organização de informações**: Dados estruturados em múltiplas dimensões
+
+**Boas práticas**:
+
+- Use arrays 2D para dados tabulares
+- Use arrays 3D para dados volumétricos
+- Sempre verifique os limites antes de acessar elementos
+- Considere usar `Arrays.deepToString()` para imprimir arrays multidimensionais
+- Mantenha a consistência no tamanho das dimensões quando possível
+
+Lembre-se de que arrays multidimensionais podem ter diferentes comprimentos em cada dimensão, oferecendo flexibilidade para estruturas de dados irregulares.
