--- a/content/docs/switch-statement.mdx
+++ b/content/docs/switch-statement.mdx
@@ -103,15 +103,17 @@ Aqui, a variável `tamanho` é atribuída com o valor `Grande`.
 
 ## Fluxograma da Instrução switch
 
-<div>
+A instrução switch funciona da seguinte forma:
 
-![Fluxograma da instrução switch](/img/docs/switch-statement-flowchart.svg)
+1. A expressão é avaliada uma vez
+2. O valor é comparado com cada case
+3. Se houver correspondência, o código do case é executado
+4. Se não houver correspondência, o código do default é executado (se existir)
+5. O `break` termina a execução do switch
 
-<p align="center" className="text-base text-gray-600 font-medium">
-  Fluxograma da instrução switch
-</p>
-
-</div>
+```
+Expressão → Compara com cases → Executa código → Break → Fim
+```
 
 ## Tipos de Dados Suportados
 
